// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti"
      id={null}
    />
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti"
      id={null}
    />
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
    height="100%"
    id={null}
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
    height="100%"
    id="Panel"
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jwlPXp Card__CardGridWrapper-sc-1g3s676-4 crWWGQ"
        id={null}
        rows={null}
      >
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_62"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_62-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_63"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_63-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_64"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_64-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_65"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_65-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_66"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_66-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_67"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_67-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_68"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_68-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 bdKrFx"
    height="100%"
    id="Panel"
    width="100%"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jwlPXp Card__CardGridWrapper-sc-1g3s676-4 crWWGQ"
        id={null}
        rows={null}
      >
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_218"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_218-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_219"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_219-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_220"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_220-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_221"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_221-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_222"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_222-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_223"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_223-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
        <div
          className="CardWrapper__StyledCardWrapper-meln7c-0 jiAJLX Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
          href={null}
          id="storyshots_224"
          media=""
          onClick={null}
        >
          <section
            className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
            id="storyshots_224-Body"
            onClick={null}
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dBAreK"
              fontSize="1rem"
              fontWeight={400}
              id={null}
              letterSpacing="0.5px"
            >
              
            </p>
          </section>
        </div>
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 irgvti Panel__PanelSection-sc-48epke-2 BZwGc"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;
